# juce-anagram-lv2

./: CMakeLists.txt  LICENSE  README.md  juce_anagram.h  juce_audio_plugin_client_Anagram_LV2.cpp
cross-compilation-patches/: v7.0.0.patch  v7.0.1.patch  v7.0.10.patch  v7.0.11.patch  v7.0.12.patch  v7.0.3.patch  v7.0.6.patch  v7.0.7.patch  v7.0.8.patch  v7.0.9.patch  v8.0.0.patch  v8.0.12.patch  v8.0.3.patch  v8.0.4.patch
example/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h
juce_audio_plugin_client/detail/: juce_CheckSettingMacros.h
